--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,18 @@
 org.gradle.jvmargs=-Xmx4G
 
-minecraft_version=1.20.4
-enabled_platforms=fabric,forge,neoforge
+minecraft_version=1.18.2
+enabled_platforms=fabric,forge
 
 archives_base_name=vivecraft
 mod_version=1.1.11
 maven_group=org.vivecraft
 
-architectury_version=11.0.5
+architectury_version=4.11.93
 
 fabric_loader_version=0.15.7
-fabric_api_version=0.91.1+1.20.4
+fabric_api_version=0.77.0+1.18.2
 
-forge_version=1.20.4-49.0.30
-neoforge_version=20.4.237
+forge_version=1.18.2-40.2.17
 
 
 
